--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Gouinote</string>
     <string name="Tap_to_continue">Tap to continue</string>
+
+    <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
+    <string name="user_nickname">user_nickname</string>
+    <string name="user_password">user_password</string>
 </resources>
