--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
     <string name="app_name">Gouinote</string>
     <string name="Tap_to_continue">Tap to continue</string>
+    <string name="Sign_in">Sign in</string>
+    <string name="Create_account">Create account</string>
+    <string name="Be_a_guest">Be a guest</string>
 
     <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
     <string name="user_nickname">user_nickname</string>
     <string name="user_password">user_password</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
