--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="Sign_in">Sign in</string>
     <string name="Create_account">Create account</string>
     <string name="Be_a_guest">Be a guest</string>
+    <string name="Nickname">Nickname</string>
+    <string name="Password">Password</string>
+    <string name="OK">OK</string>
 
     <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
     <string name="user_nickname">user_nickname</string>
