--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="Password">Password</string>
     <string name="OK">OK</string>
     <string name="Zero_notes">0 notes</string>
+    <string name="No_activity">No activity</string>
 
     <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
     <string name="user_nickname">user_nickname</string>
