--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="OK">OK</string>
     <string name="Zero_notes">0 notes</string>
     <string name="No_activity">No activity</string>
+    <string name="Nb_notes">%1$d notes</string>
+    <string name="Nb_likes">%1$d likes</string>
 
     <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
     <string name="user_nickname">user_nickname</string>
