--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="Nb_notes">%1$d notes</string>
     <string name="Nb_likes">%1$d likes</string>
     <string name="User_connected">%1$s connected</string>
+    <string name="Log_out">Log out</string>
 
     <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
     <string name="user_nickname">user_nickname</string>
