--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="Nb_likes">%1$d likes</string>
     <string name="User_connected">%1$s connected</string>
     <string name="Log_out">Log out</string>
+    <string name="Write_your_message">Write your message</string>
+    <string name="Send_note">Send note</string>
 
     <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
     <string name="user_nickname">user_nickname</string>
