--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,9 @@
     <string name="Log_out">Log out</string>
     <string name="Write_your_message">Write your message</string>
     <string name="Send_note">Send note</string>
-    <string name="Note_is_empty">Note is empty</string>
+    <string name="Error_note_is_empty">Error: note is empty</string>
+    <string name="Error_note_has_not_been_added">Error: note has not been added</string>
+    <string name="Note_has_been_added">Note has been added</string>
 
     <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
     <string name="user_nickname">user_nickname</string>
