--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="Error_note_is_empty">Error: note is empty</string>
     <string name="Error_note_has_not_been_added">Error: note has not been added</string>
     <string name="Note_has_been_added">Note has been added</string>
+    <string name="days_ago">day(s) ago</string>
+    <string name="hours_ago">hour(s) ago</string>
+    <string name="minutes_ago">minute(s) ago</string>
+    <string name="seconds_ago">second(s) ago</string>
 
     <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
     <string name="user_nickname">user_nickname</string>
